--- a/public/views/top.ejs
+++ b/public/views/top.ejs
@@ -4,30 +4,27 @@
         <% include ./partials/head %>
     </head>
     <body>
-        <!-- Header -->
         <header>
-                <% include ./partials/header %>
+            <% include ./partials/header %>
         </header>
-        
-        <!-- Search -->
         <div class="container">
 
-            <div class="jumbotron text-center">
-                <h1>Top Terms</h1>
-            </div>
+        <div class="jumbotron text-center">
+            <h1>Top Terms</h1>
+        </div>
 
-            <% terms.forEach(function(query, index) { %>
-                <div class="col-sm-6 panel">
-                    <a class="btn btn-block btn-<%=query.style%> btn-lg" href="/results?q=<%query.term %>">
-                        <%= query.term %>
-                    </a>
-                </div>
-            <% }) %>
+        <% terms.forEach(function(query, index){ %>
+            <div class="col-sm-6 panel">
+                <a class="btn btn-block btn-<%=query.style%> btn-lg" href="/results?q=<%=query.term %>">
+                    <%= query.term %>
+                </a>
+            </div>
+        <% }) %>
 
         </div>
-        <!-- Footer -->
         <footer>
-                <% include ./partials/footer %>
+            <% include ./partials/footer %>
         </footer>
+
     </body>
 </html>
